--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,13 @@
 <resources>
     <string name="app_name">ExerciciosApp</string>
-    <string name="txtvl">Digite valor i</string>
-    <string name="txtvl2">Digite valor A</string>
-    <string name="txtvl3">Digite Valor B</string>
-    <string name="txtvl4">Digite Valor C</string>
+    <string name="txtTitulo">Bem-vindo!</string>
+    <string name="txtC">Cachorro Quente</string>
+    <string name="txtR">Reftigerante</string>
+    <string name="txtS">Sobremesa</string>
     <string name="btnVerificar">Verificar</string>
-    <string name="txtresultado">Resultado</string>
-    <string name="txtprova">Prova</string>
-    <string name="txttitulo">Bem-vindo!</string>
+    <string name="vlC">Digite a quantidade C </string>
+    <string name="vlR">Digite a quantidade R</string>
+    <string name="vlS">Digite a quantidade S</string>
+    <string name="txtTotal">Valor total</string>
+
 </resources>
